# bloodbank

./: .copier-answers.yml  .coverage  .env.example  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  .project.json  AGENTS.md  Dockerfile  EventDrivenArchitecture.md  GEMINI.md  GOD.md  IMPLEMENTATION_REPORT.md  INTEGRATION_SUMMARY.md  Makefile  PACKAGING_SUMMARY.md  README.md  RECOMMENDATION.md  TASK.md  config.py  correlation_tracker.py  coverage.xml  debug-publisher.sh  ecosystem.config.js  events.py  fix these  http.py  log  mcp_server.py  mise.toml  pyproject.toml  pyproject.toml.backup  pytest.ini  rabbit.py  requirements.md  start.sh  subscriber_example.py  test_command_flow.py  test_import_compatibility.py  (+5 more)
.codegraph/: daemon.pid
.github/: copilot-instructions.md
.letta/: settings.local.json
_bmad/: README.md  config.toml
_bmad-output/: README.md  workspace.html
_bmad_output/: README.md  issue-126-execution.md  issue-128-execution.md  issue-130-execution.md  issue-132-execution.md  issue-134-execution.md  issue-136-execution.md  issue-138-execution.md  issue-140-execution.md  issue-142-execution.md  issue-144-execution.md  issue-146-execution.md  issue-148-execution.md  issue-150-execution.md  issue-152-execution.md  issue-154-execution.md  issue-156-execution.md  issue-158-execution.md  issue-160-execution.md  issue-162-execution.md  issue-164-execution.md  issue-166-execution.md  issue-168-execution.md  issue-170-execution.md  issue-172-execution.md  issue-174-execution.md  issue-177-execution.md  issue-180-execution.md  issue-185-closeout-comment.md  issue-185-execution.md  issue-186-execution.md  issue-187-execution.md  issue-188-execution.md  issue-189-execution.md  issue-191-execution.md  issue-193-execution.md  issue-195-execution.md  issue-197-execution.md  issue-207-execution.md  issue-213-execution.md  (+3 more)
adapters/: README.md
agents/: README.md
bridge/: .gitignore  package.json
claude_skill/: SKILL.md  example.py  pyproject.toml
claude_updates/: MIGRATION_v1_to_v2.md  SKILL.md  SUMMARY.md  config.py  correlation_tracker.py  events.py  http.py  install.sh  pyproject.toml  rabbit.py
cli/: README.md  bb.py
command_adapter/: __init__.py  __main__.py  config.py  consumer.py  dispatcher.py  http_dispatcher.py  openclaw_hook.py  publisher.py
command_fsm/: README.md  __init__.py  idempotency.py  manager.py  redis_store.py  states.py
compose/: .env.example  README.md  docker-compose.yml
consumer_template/: README.md  runner.py
context_monitor/: monitor.py
docs/: ARCHITECTURE.md  Bloodbank_Event_Schemas.md  COMPATIBILITY_ANALYSIS.md  (+18 more)
services/lifecycle-controller/: pyproject.toml
services/lifecycle-controller/scripts/: dogfood_drumjangler.py
services/lifecycle-controller/src/: main.py  models.py  outbox_publisher.py  reconciler.py  sweeper.py  worker.py
services/lifecycle-controller/src/db/: 001_lifecycle_controller.sql  repository.py  schema.sql
services/lifecycle-controller/tests/: test_reconciler.py  test_runtime_blockers.py
(+488 files in other folders)
