[project]
name = "bloodbank"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "aio-pika>=9",
  "orjson",
  "typer[all]",
  "watchfiles",        # or watchdog, your call
  "httpx",
  "python-dotenv",
  "mcp[server]",       # official MCP SDK (includes FastMCP)
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8682
