[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloodbank"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings>=2.0",  # For BaseSettings
  "aio-pika>=9",
  "orjson",
  "typer",
  "watchfiles",        # or watchdog, your call
  "httpx",
  "python-dotenv",
  "mcp",               # official MCP SDK (includes FastMCP)
  "redis>=5.0.0",      # Async Redis for correlation tracking
  "textual>=0.44.0",   # TUI framework
  "rich>=13.0.0",      # Rich text and formatting (used by Textual)
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-timeout>=2.2.0",
  "fakeredis[aioredis]>=2.21.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
bb = "event_producers.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["event_producers"]

[tool.uv]
package = true

[tool.uvicorn]
host = "0.0.0.0"
port = 8682
