[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloodbank"
version = "0.2.0"
description = "Event bus infrastructure for 33GOD agentic developer pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.scripts]
bb = "event_producers.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["event_producers*", "bloodbank*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
